repository/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repository-nginx
spec:
  selector:
    matchLabels:
      app: nginx
      usage: proxy
  template:
    metadata:
      labels:
        app: nginx
        usage: proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.13-alpine
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: conf
      volumes:
        - name: conf
          configMap:
            name: proxy
