repository/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  type: ClusterIP
  selector:
    app: nginx
    usage: proxy
  ports:
    - port: 80
      targetPort: 80
